--- a/html/form.html
+++ b/html/form.html
@@ -39,7 +39,7 @@
   <meta property="twitter:description"
     content="Unlock the potential of bradley template for seamless CRM education management. Take control of your e-learning experience, all in one place" />
   <meta property="twitter:locale" content="English" />
-  <meta property="twitter:image" content="assets/img/logo.png" />
+  <meta property="twitter:image" content="../assets/img/logo.png" />
   <meta property="twitter:url" content="https://moksy.com" />
 
   <!-- Open Graph -->
@@ -48,7 +48,7 @@
   <meta property="og:description"
     content="Unlock the potential of bradley template for seamless CRM education management. Take control of your e-learning experience, all in one place" />
   <meta property="og:locale" content="English" />
-  <meta property="og:image" content="assets/img/logo.png" />
+  <meta property="og:image" content="../assets/img/logo.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:url" content="https://moksy.com" />
@@ -56,24 +56,24 @@
   <meta property="fb:app_id" content="" />
 
   <!--favicons -->
-  <link rel="icon" sizes="16x16" type="image/png" href="assets/img/favicon.png" />
+  <link rel="icon" sizes="16x16" type="image/png" href="../assets/img/favicon.png" />
 
 <!--touch-icon -->
-<link rel="apple-touch-icon" sizes="57x57" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="60x60" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="72x72" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="76x76" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="114x114" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="120x120" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="144x144" href="assets/img/logo.png">
-<link rel="icon" type="image/png" sizes="144x144" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="152x152" href="assets/img/logo.png">
-<link rel="icon" type="image/png" sizes="152x152" href="assets/img/logo.png">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.png">
-<link rel="icon" type="image/png" sizes="180x180" href="assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="57x57" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="60x60" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="76x76" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="120x120" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="144x144" href="../assets/img/logo.png">
+<link rel="icon" type="image/png" sizes="144x144" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="152x152" href="../assets/img/logo.png">
+<link rel="icon" type="image/png" sizes="152x152" href="../assets/img/logo.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../assets/img/logo.png">
+<link rel="icon" type="image/png" sizes="180x180" href="../assets/img/logo.png">
 
   <meta name="msapplication-TileColor" content="">
-  <meta name="msapplication-TileImage" content="assets/img/logo.png">
+  <meta name="msapplication-TileImage" content="../assets/img/logo.png">
   <meta name="theme-color" content="">
 
   <!--web-manifest -->
@@ -81,8 +81,8 @@
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css' rel='stylesheet' media='all'>
   <link href='https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css' rel='stylesheet' media='all'>
   <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css' rel='stylesheet' media='all'>
-  <link href='assets/styles/styles.css' rel='stylesheet' media='all'>
-  <link href='assets/styles/bradley.css' rel='stylesheet' media='all'>
+  <link href='../assets/styles/styles.css' rel='stylesheet' media='all'>
+  <link href='../assets/styles/bradley.css' rel='stylesheet' media='all'>
 
   <script type='application/ld+json'>
          {
@@ -94,9 +94,9 @@
            "sameAs": [
               ""
            ],
-           "logo": "assets/img/logo.png",
+           "logo": "../assets/img/logo.png",
            "priceRange": "$$$",
-           "image": "assets/img/logo.png",
+           "image": "../assets/img/logo.png",
            "description": "Unlock the potential of bradley template for seamless CRM education management. Take control of your e-learning experience, all in one place",
            "address": {
               "@type": "PostalAddress",
@@ -137,7 +137,7 @@
         <nav class="navbar navbar-light bg-white navbar-expand-md text-bold">
           <div class="col-3 text-left">
             <a href="#" itemprop="url">
-              <img src="assets/img/logo.png" class="logo" alt="an image">
+              <img src="../assets/img/logo.png" class="logo" alt="an image">
             </a>
           </div>
 
@@ -172,12 +172,12 @@
           <div class="collapse navbar-collapse navbar-collapse-2 ml-2">
             <ul class="navbar-nav ml-auto justify-content-end">
               <li class="nav-item">
-                <a class="nav-link" href="html/form.html" itemprop="url">
+                <a class="nav-link" href="#" itemprop="url">
                   Login </a>
               </li>
             </ul>
 
-            <a class="btn btn-primary ml-md-3" href="html/form.html" itemprop="url">
+            <a class="btn btn-primary ml-md-3" href="#" itemprop="url">
               REGISTER </a>
           </div>
         </nav>
@@ -272,7 +272,7 @@
             <p class="lead" itemprop="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias architecto ab vero atque pariatur est.
             </p>
-            <p class="mt-4" itemprop="text"><a href="html/course.html" class="btn btn-primary">
+            <p class="mt-4" itemprop="text"><a href="#" class="btn btn-primary">
                 Join Now </a></p>
           </div>
         </div>
@@ -354,24 +354,24 @@
                   alt="an image" itemprop="image">
               </figure>
               <h3 class="heading-custom-class">
-                <a class="url-custom-class" href="https://www.facebook.com/" itemprop="url">
+                <a class="url-custom-class" href="#" itemprop="url">
                   Tajul </a>
               </h3>
               <p class="para-custom-class" itemprop="text">
                 Web Developer </p>
               <ul class="follow-us clearfix">
                 <li class="li-custom-class">
-                  <a class="url-custom-class" href="https://www.facebook.com/" itemprop="url">
+                  <a class="url-custom-class" href="#" itemprop="url">
                     <i class="fab text-dark fa-facebook" aria-hidden="true" itemprop="icon"></i>
                   </a>
                 </li>
                 <li class="li-custom-class">
-                  <a class="url-custom-class" href="https://www.facebook.com/" itemprop="url">
+                  <a class="url-custom-class" href="#" itemprop="url">
                     <i class="fab text-dark fa-twitter" aria-hidden="true" itemprop="icon"></i>
                   </a>
                 </li>
                 <li class="li-custom-class">
-                  <a class="url-custom-class" href="https://www.facebook.com/" itemprop="url">
+                  <a class="url-custom-class" href="#" itemprop="url">
                     <i class="fab text-dark fa-linkedin" aria-hidden="true" itemprop="icon"></i>
                   </a>
                 </li>
@@ -726,7 +726,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias architecto ab vero atque pariatur est.
             </p>
 
-            <p itemprop="text"><a href="html/course.html">
+            <p itemprop="text"><a href="#">
                 Join Now <i class="fas fa-angle-right"></i></a></p>
           </div>
           <div class="col-12 col-md-6 pt-4 pt-md-0">
@@ -737,7 +737,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias architecto ab vero atque pariatur est.
             </p>
 
-            <p itemprop="text"><a href="html/course.html">
+            <p itemprop="text"><a href="#">
                 Join Now <i class="fas fa-angle-right"></i></a></p>
           </div>
         </div>
@@ -779,26 +779,26 @@
                 <div class="standard_social_links">
                   <div>
                     <li class="round-btn btn-facebook" itemprop="item">
-                      <a href="https://www.facebook.com/" class="url-custom-class" title="This Is A Title"
+                      <a href="#" class="url-custom-class" title="This Is A Title"
                         itemprop="url">
                         <i class="fab fa-facebook-f"></i>
                       </a>
                     </li>
                     <li class="round-btn btn-linkedin" itemprop="item">
-                      <a href="https://www.facebook.com/" class="url-custom-class" title="This Is A Title"
+                      <a href="#" class="url-custom-class" title="This Is A Title"
                         itemprop="url">
                         <i class="fab fa-linkedin-in" itemprop="icon"></i>
                       </a>
                     </li>
                     <li class="round-btn btn-twitter" itemprop="item">
-                      <a href="https://www.facebook.com/" class="url-custom-class" title="This Is A Title"
+                      <a href="#" class="url-custom-class" title="This Is A Title"
                         itemprop="url">
                         <i class="fab fa-twitter" itemprop="icon"></i>
                       </a>
                     </li>
 
                     <li class="round-btn btn-whatsapp" itemprop="item">
-                      <a href="https://www.facebook.com/" class="url-custom-class" title="This Is A Title"
+                      <a href="#" class="url-custom-class" title="This Is A Title"
                         itemprop="url">
                         <i class="fab fa-whatsapp" itemprop="icon"></i>
                       </a>
