--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <meta name="theme-color" content="">
 
   <!--web-manifest -->
-  <link rel="manifest" href="/templates/bradley/manifest.json">
+  <link rel="manifest" href="manifest.json">
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css' rel='stylesheet' media='all'>
   <link href='https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css' rel='stylesheet' media='all'>
   <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css' rel='stylesheet' media='all'>
@@ -128,6 +128,7 @@
 
 <body>
   <div itemprop="isPartOf" itemscope itemtype="http://schema.org/WebSite"></div>
+
   <!--  howard header section main wrapper start from here -->
   <section id="headerhdm8ad340b3" class="howard header headerhdm8ad340b3" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
@@ -188,6 +189,7 @@
     <!-- /header main wrapper ends here -->
   </section>
   <!-- / howard header section main wrapper start from here -->
+
   <!-- agent about section main wrapper start from here -->
   <section id="aboutd1e3f52aae36e7047" class="agent about aboutd1e3f52aae36e7047" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
@@ -251,12 +253,6 @@
     </div>
     </div>
     
-  
-  
-  
-  
-  
-  
   <!-- fernando section main wrapper start from here -->
   <section id="fernandof38911b935c3ef6d9" class="fernando feature fernandof38911b935c3ef6d9" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
@@ -328,9 +324,9 @@
     <!-- /feature ends here -->
 
   </section>
-
-  <!-- /fernando section main wrapper ends here --><!-- tagur  section main wrapper start from here -->
-
+  <!-- /fernando section main wrapper ends here -->
+  
+  <!-- tagur  section main wrapper start from here -->
   <section id="teama72342011f2d707e" class="tagur team teama72342011f2d707e" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
     <!-- main content starts from here -->
@@ -488,7 +484,9 @@
     </div>
     <!-- main content ends here -->
   </section>
-  <!-- /tagur  section main wrapper ends here --><!-- campbell section main wrapper start from here -->
+  <!-- /tagur  section main wrapper ends here -->
+  
+  <!-- campbell section main wrapper start from here -->
   <section id="campbelldy9djhgjfg" class="campbell content campbelldy9djhgjfg" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
 
@@ -509,8 +507,9 @@
     <!-- /content ends here -->
 
   </section>
-
-  <!-- /campbell section main wrapper ends here --><!-- sagnu service section main wrapper start from here -->
+  <!-- /campbell section main wrapper ends here -->
+  
+  <!-- sagnu service section main wrapper start from here -->
   <section id="serviceebfcf165e4ae5852" class="sagnu serviceebfcf165e4ae5852 service" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
     <div class="container">
@@ -641,8 +640,9 @@
 
     </div>
   </section>
-  <!-- /sagnu service section main wrapper ends here --><!-- cash section start from here -->
-
+  <!-- /sagnu service section main wrapper ends here -->
+  
+  <!-- cash section start from here -->
   <section id="counterc1486b52e923e265f" class="cash counter counterc1486b52e923e265f" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
     <!-- counter section starts here -->
@@ -695,8 +695,9 @@
     </div>
     <!-- /counter section ends here -->
   </section>
-
-  <!-- /cash section ends here --><!-- fuskoni section main wrapper start from here -->
+  <!-- /cash section ends here -->
+  
+  <!-- fuskoni section main wrapper start from here -->
   <section id="fuskonift41bl2cga4" class="fuskoni feature fuskonift41bl2cga4" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
 
@@ -748,8 +749,9 @@
     <!-- /feature ends here -->
 
   </section>
-
-  <!-- /fuskoni section main wrapper ends here --><!-- fanus footer section main wrapper start from here -->
+  <!-- /fuskoni section main wrapper ends here -->
+  
+  <!-- fanus footer section main wrapper start from here -->
   <section id="footerb5f31747c48ae942" class="fanus footer footerb5f31747c48ae942" itemscope
     itemtype="http://schema.org/Organization" itemprop="text">
     <!-- footer content starts here -->
